#24: navegaçao entre telas

--- a/RUBY/gcond/app/views/conddespesas/index.html.erb
+++ b/RUBY/gcond/app/views/conddespesas/index.html.erb
@@ -29,3 +29,6 @@
 <br>
 
 <%= link_to 'New Conddespesa', new_conddespesa_path %>
+
+<a href="http://localhost:3000/rfinanceiros" >Responsaveis financeiros</a>
+<a href="http://localhost:3000/" >Demonstrativos</a>
