--- a/RUBY/gcond/app/views/demonstrativos/index.html.erb
+++ b/RUBY/gcond/app/views/demonstrativos/index.html.erb
@@ -33,3 +33,5 @@
 <br>
 
 <%= link_to 'New Demonstrativo', new_demonstrativo_path %>
+<a href="http://localhost:3000/rfinanceiros" >Responsaveis financeiros</a>
+<a href="http://localhost:3000/conddespesas" >Despesas condominio</a>
