--- a/RUBY/gcond/app/views/rfinanceiros/index.html.erb
+++ b/RUBY/gcond/app/views/rfinanceiros/index.html.erb
@@ -33,3 +33,5 @@
 <br>
 
 <%= link_to 'New Rfinanceiro', new_rfinanceiro_path %>
+<a href="http://localhost:3000/" >Demonstrativos</a>
+<a href="http://localhost:3000/conddespesas" >Despesas condominio</a>
