--- a/RUBY/gcond/app/views/demonstrativos/index.html.erb
+++ b/RUBY/gcond/app/views/demonstrativos/index.html.erb
@@ -35,3 +35,6 @@
 <%= link_to 'New Demonstrativo', new_demonstrativo_path %>
 <a href="http://localhost:3000/rfinanceiros" >Responsaveis financeiros</a>
 <a href="http://localhost:3000/conddespesas" >Despesas condominio</a>
+
+
+<h2>Preencha as tabelas de Responsaveis financeiros e de Despesas do condominio antes de gerar um demonstrativo com mes e ano atuais</h2>
